--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body{
     font-family: "Roboto";
+    margin: 0;
+}
+
+#nav{
+    width: 100%;
+    height: 10%;
+    background-color: rgb(240, 240, 240);
+}
+
+#nav a{
+    height: 100%;
+    display: inline-block;
+    background-color: rgb(245, 245, 245);
 }
