--- a/style.css
+++ b/style.css
@@ -5,12 +5,29 @@ body{
 
 #nav{
     width: 100%;
-    height: 10%;
+    height: 7.5%;
     background-color: rgb(240, 240, 240);
 }
 
+#nav ul{
+    width: 30%;
+    display: flex;
+    height: 100%;
+}
+
+#nav li{
+    height: 100%;
+    flex-grow: 1;
+    margin-right: 50px;
+    list-style: none;
+    background-color: red;
+    text-align: center;
+}
 #nav a{
     height: 100%;
     display: inline-block;
-    background-color: rgb(245, 245, 245);
+    /*background-color: rgb(245, 245, 245);*/
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    padding-top: 50%;
 }
