--- a/style.css
+++ b/style.css
@@ -1,34 +1,63 @@
 body{
-    font-family: "Roboto";
     margin: 0;
+    font-family: "Roboto";
 }
 
 #nav{
-    width: 100%;
-    height: 7.5%;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(250, 250, 250);
 }
 
 #nav ul{
-    width: 30%;
     display: flex;
-    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10%;
 }
 
-#nav li{
-    height: 100%;
-    flex-grow: 1;
-    margin-right: 50px;
-    list-style: none;
-    background-color: rgb(230, 230, 230);
-    text-align: center;
-}
-#nav a{
-    height: 100%;
-    display: inline-block;
-    /*background-color: rgb(245, 245, 245);*/
+#nav ul li, a{
     text-decoration: none;
-    font-weight: 400;
     color: rgb(0, 0, 0);
-    padding-top: 50%;
+    list-style: none;
+}
+
+#logo{
+    font-size: 30px;
+}
+
+#content{
+    margin: 5% 20%;
+}
+
+#info{
+    height: 200px;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 300;
+}
+
+#projects{
+    text-align: center;
+    padding-bottom: 100px;
+}
+
+#project-box-container{
+    display: flex;
+    justify-content: space-between;
+    height: 45%;
+    
+}
+
+.project-box{
+    width: 10%;
+    padding: 20px 7.5%;
+    background-color: rgb(240, 240, 240);
+}
+
+#footer{
+    width: 100%;
+    height: 7.5%;
+    background-color: rgb(240, 240, 240);
+    font-weight: 100;
+    text-align: center;
+    padding-top: 20px;
 }
