--- a/style.css
+++ b/style.css
@@ -53,6 +53,16 @@ body{
     background-color: rgb(240, 240, 240);
 }
 
+.project-box img{
+    width: 100%
+}
+
+.anchorButton{
+    background-color: rgb(225, 225, 225);
+    font-weight: 500;
+    padding: 4px;
+}
+
 #footer{
     width: 100%;
     height: 7.5%;
